--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <head>
 </head>
 <body>
-<p> This website is a wrok in porgress. Check back later when we announce the realse date of our website.</p>
+<p> This website is a work in porgress. Check back later when we announce the realse date of our website.</p>
 </body>
 </html>
