--- a/index.html
+++ b/index.html
@@ -1,7 +1,44 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NCR Group Website</title>
+  <style>
+
+    .banner {
+      display: flex;
+      justify-content: space-between;
+      align-items: center; 
+      padding: 1rem 2rem; 
+      background-color: #f0f0f0; 
+    }
+
+    /* Text Styles */
+    .banner-text {
+      font-size: 1.5rem; /* Sets font size */
+      font-weight: bold; /* Makes text bold */
+    }
+
+    /* Button Styles */
+    .banner-button {
+      background-color: #191970; 
+      border: none; 
+      color: white; 
+      padding: 10px 20px; /
+      text-align: center; 
+      text-decoration: none; 
+      display: inline-block;
+      font-size: 16px; 
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-<p> This website is a work in porgress. Check back later when we announce the realse date of our website.</p>
+  <div class="banner">
+    <h1 class="banner-text">NCR Group Website</h1>
+    <a href="#" class="banner-button">Coming Soon</a>
+  </div>
+  <p>This website is a work in progress. Check back later when we announce the release date of our website.</p>
 </body>
 </html>
