--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       justify-content: space-between;
       align-items: center; 
       padding: 1rem 2rem; 
-      background-color: #f0f0f0; 
+      background-color: #0f053e; 
     }
 
     /* Text Styles */
@@ -22,7 +22,7 @@
 
     /* Button Styles */
     .banner-button {
-      background-color: #191970; 
+      background-color: #0f053e; 
       border: none; 
       color: white; 
       padding: 10px 20px; /
@@ -37,7 +37,8 @@
 <body>
   <div class="banner">
     <h1 class="banner-text">NCR Group Website</h1>
-    <a href="#" class="banner-button">Coming Soon</a>
+    <a href="https://www.roblox.com/groups/4307386/Nextius-Retail-Solutions" class="banner-button">Roblox Group</a>
+    <a href = "https://discord.gg/tV35c3M5GC" class="banner-button">Discord Server</a>
   </div>
   <p>This website is a work in progress. Check back later when we announce the release date of our website.</p>
 </body>
