--- a/index.html
+++ b/index.html
@@ -5,31 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NCR Group Website</title>
   <style>
-
     .banner {
       display: flex;
-      justify-content: space-between;
-      align-items: center; 
-      padding: 1rem 2rem; 
-      background-color: #0f053e; 
-    }
-
-    /* Text Styles */
-    .banner-text {
-      font-size: 1.5rem; /* Sets font size */
-      font-weight: bold; /* Makes text bold */
+      justify-content: flex-end;
+      align-items: center;
+      padding: 1rem 2rem;
+      background-color: #0f053e;
+      color: white; 
     }
 
     /* Button Styles */
     .banner-button {
-      background-color: #0f053e; 
-      border: none; 
-      color: white; 
-      padding: 10px 20px; /
-      text-align: center; 
-      text-decoration: none; 
+      background-color: #0f053e;
+      border: none;
+      padding: 10px 20px;
+      text-align: center;
+      text-decoration: none;
       display: inline-block;
-      font-size: 16px; 
+      font-size: 16px;
       cursor: pointer;
     }
   </style>
@@ -38,7 +31,7 @@
   <div class="banner">
     <h1 class="banner-text">NCR Group Website</h1>
     <a href="https://www.roblox.com/groups/4307386/Nextius-Retail-Solutions" class="banner-button">Roblox Group</a>
-    <a href = "https://discord.gg/tV35c3M5GC" class="banner-button">Discord Server</a>
+    <a href="https://discord.gg/tV35c3M5GC" class="banner-button">Discord Server</a>
   </div>
   <p>This website is a work in progress. Check back later when we announce the release date of our website.</p>
 </body>
