--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       text-decoration: none;
       display: inline-block;
       font-size: 16px;
+      color: white;
       cursor: pointer;
     }
   </style>
