--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
   <div class="banner">
     <h1 class="banner-text">NCR Group Website</h1>
-    <a href="https://www.roblox.com/groups/4307386/Nextius-Retail-Solutions" class="banner-button">Roblox Group</a>
+    <a href="https://www.roblox.com/groups/14556638/Nextius-Retail-Solutions#!/about" class="banner-button">Roblox Group</a>
     <a href="https://discord.gg/tV35c3M5GC" class="banner-button">Discord Server</a>
   </div>
   <p>This website is a work in progress. Check back later when we announce the release date of our website.</p>
