--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <h1 class="banner-text">NCR Group Website</h1>
     <a href="https://www.roblox.com/groups/14556638/Nextius-Retail-Solutions#!/about" class="banner-button">Roblox Group</a>
     <a href="https://discord.gg/tV35c3M5GC" class="banner-button">Discord Server</a>
+    	<a href="https://nps-ncr-purchasing-system.pages.dev/">Product Portal</a>
   </div>
   <p>This website is a work in progress. Check back later when we announce the release date of our website.</p>
 </body>
