--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
     <a href="https://discord.gg/tV35c3M5GC" class="banner-button">Discord Server</a>
     	<a href="https://nps-ncr-purchasing-system.pages.dev/">Product Portal</a>
   </div>
-  <p>This website is a work in progress. Check back later when we announce the release date of our website.</p>
+  <p><center>Welcome to NCR Group within the roblox platform, below are some things that we are offering and/or working on.</center></p>
+  <li>Retail Assets (SCO, MainBanks, Scan and Shop, Cafe POS Basicand EAS Gates)</li>
+  <li>A fire alarm based off of the real life vig system.</li>
+  <li>Office & School Decor Packs</li>
+  <li>And much more being worked on, yet to come!</li>
 </body>
 </html>
