--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
     <h1 class="banner-text">NCR Group Website</h1>
     <a href="https://www.roblox.com/groups/14556638/Nextius-Retail-Solutions#!/about" class="banner-button">Roblox Group</a>
     <a href="https://discord.gg/tV35c3M5GC" class="banner-button">Discord Server</a>
-    	<a href="https://nps-ncr-purchasing-system.pages.dev/">Product Portal</a>
+    <a href="https://nps-ncr-purchasing-system.pages.dev/" class="banner-button">Product Portal</a>
   </div>
   <p><center>Welcome to NCR Group within the roblox platform, below are some things that we are offering and/or working on.</center></p>
-  <li>Retail Assets (SCO, MainBanks, Scan and Shop, Cafe POS Basicand EAS Gates)</li>
-  <li>A fire alarm based off of the real life vig system.</li>
-  <li>Office & School Decor Packs</li>
-  <li>And much more being worked on, yet to come!</li>
+  <li><center>Retail Assets (SCO, MainBanks, Scan and Shop, Cafe POS Basicand EAS Gates)</center></li>
+  <li><center>A fire alarm based off of the real life vig system</center></li>
+  <li><center>Office & School Decor Packs</center></li>
+  <li><center>And much more being worked on, yet to come!</center></li>
 </body>
 </html>
