--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <a href="https://nps-ncr-purchasing-system.pages.dev/" class="banner-button">Product Portal</a>
   </div>
   <p><center>Welcome to NCR Group within the roblox platform, below are some things that we are offering and/or working on.</center></p>
-  <li><center>Retail Assets (SCO, MainBanks, Scan and Shop, Cafe POS Basicand EAS Gates)</center></li>
-  <li><center>A fire alarm based off of the real life vig system</center></li>
-  <li><center>Office & School Decor Packs</center></li>
-  <li><center>And much more being worked on, yet to come!</center></li>
+  <center><li></li>Retail Assets (SCO, MainBanks, Scan and Shop, Cafe POS Basicand EAS Gates)</li></center>
+  <center><li>A fire alarm based off of the real life vig system</li></center>
+  <center><li>Office & School Decor Packs</li></center>
+  <center><li>And much more being worked on, yet to come!</li></center>
 </body>
 </html>
