--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
   <center><li>Retail Assets (SCO, MainBanks, Scan and Shop, Cafe POS Basicand EAS Gates)</li></center>
   <center><li>A fire alarm based off of the real life vig system</li></center>
   <center><li>Office & School Decor Packs</li></center>
-  <center><li>And much more being worked on, yet to come!</li></center>
+  <center><li>And lots more yet to come!</li></center>
 </body>
 </html>
