--- a/index.html
+++ b/index.html
@@ -48,5 +48,7 @@
   <center><li>A fire alarm based off of the real life vig system</li></center>
   <center><li>Office & School Decor Packs</li></center>
   <center><li>And lots more yet to come!</li></center>
+  <p><center>If you wish to buy our products, you can either buy it from our online product hub or via roblox product hub which can be found below. You also need to join our discord server to reterive your assets.</center></p>
+  
 </body>
 </html>
